Let's see if that does away with that weird crash some people get when starting Kolf.

BUG: 258998

svn path=/trunk/KDE/kdegames/kolf/; revision=1204551